添加酒店图片预览功能

--- a/client/app.json
+++ b/client/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
     "pages/bookRoom/bookRoom",
+    "pages/uploadImg/uploadImg",
     "pages/bookKTV/bookKTV",
     "pages/myInfo/myInfo"
   ],
