--- a/client/app.json
+++ b/client/app.json
@@ -3,7 +3,8 @@
     "pages/bookRoom/bookRoom",
     "pages/uploadImg/uploadImg",
     "pages/bookKTV/bookKTV",
-    "pages/myInfo/myInfo"
+    "pages/myInfo/myInfo",
+    "pages/chooseDate/chooseDate"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
