添加登录界面

--- a/client/app.json
+++ b/client/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    "pages/index/index",
     "pages/bookRoom/bookRoom",
     "pages/uploadImg/uploadImg",
     "pages/bookKTV/bookKTV",
