--- a/client/app.json
+++ b/client/app.json
@@ -7,7 +7,8 @@
     "pages/myInfo/myInfo",
     "pages/chooseDate/chooseDate",
     "pages/hotelDetail/hotelDetail",
-    "pages/submitOrder/submitOrder"
+    "pages/submitOrder/submitOrder",
+    "pages/recharge/recharge"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
