--- a/client/app.json
+++ b/client/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    
     "pages/index/index",
     "pages/bookRoom/bookRoom",
     "pages/uploadImg/uploadImg",
@@ -8,7 +9,8 @@
     "pages/chooseDate/chooseDate",
     "pages/hotelDetail/hotelDetail",
     "pages/submitOrder/submitOrder",
-    "pages/recharge/recharge"
+    "pages/recharge/recharge",
+    "pages/successOrder/successOrder"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
