页面结构修改

--- a/client/app.json
+++ b/client/app.json
@@ -8,7 +8,9 @@
     "pages/chooseDate/chooseDate",
     "pages/hotelDetail/hotelDetail",
     "pages/submitOrder/submitOrder",
-    "pages/recharge/recharge"
+    "pages/recharge/recharge",
+    "pages/homePage/homePage",
+    "pages/myOrder/myOrder"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -22,16 +24,16 @@
     "selectedColor": "#333333",
     "list": [
       {
-        "pagePath": "pages/bookRoom/bookRoom",
-        "text": "订房",
-        "iconPath": "images/hotelNo.png",
-        "selectedIconPath": "images/hotelYes.png"
+        "pagePath": "pages/homePage/homePage",
+        "text": "首页",
+        "iconPath": "images/homePageNo.png",
+        "selectedIconPath": "images/homePageYes.png"
       },
       {
-        "pagePath": "pages/bookKTV/bookKTV",
-        "text": "KTV",
-        "iconPath": "images/KTVNo.png",
-        "selectedIconPath": "images/KTVYes.png"
+        "pagePath": "pages/myOrder/myOrder",
+        "text": "订单",
+        "iconPath": "images/myOrderNo.png",
+        "selectedIconPath": "images/myOrderYes.png"
       },
       {
         "pagePath": "pages/myInfo/myInfo",
