--- a/project.config.json
+++ b/project.config.json
@@ -6,7 +6,7 @@
 	"setting": {
 		"newFeature": true
 	},
-	"appid": "wx3e607f6381680554",
+	"appid": "wxaf8344b6f294ff2d",
 	"projectname": "%E5%8D%8E%E4%BA%9A%E9%85%92%E5%BA%97%E7%AE%A1%E7%90%86",
 	"condition": {}
 }
