--- a/client/app.json
+++ b/client/app.json
@@ -1,6 +1,5 @@
 {
   "pages": [
-    
     "pages/index/index",
     "pages/bookRoom/bookRoom",
     "pages/uploadImg/uploadImg",
@@ -12,7 +11,8 @@
     "pages/recharge/recharge",
     "pages/homePage/homePage",
     "pages/myOrder/myOrder",
-    "pages/successOrder/successOrder"
+    "pages/successOrder/successOrder",
+    "pages/bookFeast/bookFeast"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
